force-app/main/default/objects/Error_Log__c/fields/Form_Id__c.field-meta.xml
<CustomField>
    <fullName>Form_Id__c</fullName>
    <description>ID of the form that had the error</description>
    <label>Form Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>