force-app/main/default/objects/Error_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>When the error occurred</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>